[package]
edition = "2018"
name = "jellyfish"
description = "a library for doing approximate and phonetic matching of strings."

version = "0.2.0"
authors = ["James Turk <dev@jamesturk.net>"]
repository = "https://github.com/jamesturk/rust-jellyfish/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "^1.6.0"
unicode-normalization = "^0.1"

[dev-dependencies]
csv = "1.1"
